[package]
name = "timed_transfer"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Library to control multiple GPIO pins with precise timings."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"

[dev-dependencies]
ctrlc = { version = "3.4.4", features = ["termination"] }
